@@ -17,6 +17,7 @@
 * Fix - Multi-Currency settings rounding option and preview.
 * Fix - Payment failure on checkout block with UPE when phone number field is hidden
 * Add - Add compatibility between Multi-Currency and WooCommerce UPS shipping extension.
+* Add - Add compatibility between Multi-Currency and WooCommerce FedEx shipping extension.
 * Fix - Fix decimal error with shipping calculations with Multi-Currency.
 
 = 3.1.0 - 2021-10-06 =
